--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  screen: 0.0.4
+  video_player: ^0.10.0+2
+#  video_player:
+#    git:
+#      url: git://github.com/flutter/plugins.git
+#      path: packages/video_player
+
 
 dev_dependencies:
   flutter_test:
